ola-parser/src/testdata/syntaxTests/parsing/var_array.sol
contract Foo {
	fn f() { var[] a; }
}
// ----
// ParserError 6933: (31-34): Expected primary expression.
